# advent-of-code

./: Cargo.toml  readme.md
.gitea/workflows/: test.yaml
2015/src/: lib.rs
2016/: Cargo.toml
2016/src/: lib.rs
2017/: Cargo.toml
2017/src/: lib.rs
2018/src/: lib.rs
2019/src/: lib.rs
2020/src/: lib.rs
2021/src/: lib.rs
2022/src/: lib.rs
2023/: Cargo.toml
2023/src/: common_values.rs  main.rs
2023/src/days/: day1.rs  day2.rs  day3.rs  day5.rs  day6.rs
2024/: Cargo.toml
2024/src/: common_values.rs  lib.rs  main.rs
2024/src/days/: day1.rs  day2.rs  day3.rs  day4.rs  mod.rs
common/src/: day.rs  file.rs  lib.rs  year.rs
lib_years/2015/: Cargo.toml
lib_years/2015/src/: common_values.rs  lib.rs
lib_years/2015/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
lib_years/2017/src/: lib.rs
lib_years/2018/: Cargo.toml
lib_years/2019/: Cargo.toml
lib_years/2020/: Cargo.toml
lib_years/2020/src/: lib.rs
lib_years/2021/: Cargo.toml
lib_years/2022/: Cargo.toml
lib_years/2023/: Cargo.toml
lib_years/2023/src/: common_values.rs  lib.rs  main-old.rs
lib_years/2023/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day1.rs  day2.rs
lib_years/2024/: Cargo.toml
lib_years/2024/src/: common_values.rs  lib.rs
lib_years/2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day09.rs  day1.rs  day10.rs  day11.rs  (+23 more)
lib_years/2025/: Cargo.toml
lib_years/2025/benches/: day4_bench.rs
lib_years/2025/src/: common_values.rs  lib.rs
src/: day1.rs  day2.rs  day3.rs  main.rs
src/days/: day1.rs  day4.rs
(+15 files in other folders)
