[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lib_years/2015",
    "lib_years/2016",
    "lib_years/2017",
    "lib_years/2018",
    "lib_years/2019",
    "lib_years/2020",
    "lib_years/2021",
    "lib_years/2022",
    "lib_years/2023",
    "lib_years/2024",
    "common",
]

[workspace.dependencies]
regex = "1.11.1"
test-case = "3.3.1"
common = { path = "./common" }

[dependencies]
advent_2024 = { path = "lib_years/2024" }
advent_2023 = { path = "lib_years/2023" }
advent_2022 = { path = "lib_years/2022" }
advent_2021 = { path = "lib_years/2021" }
advent_2020 = { path = "lib_years/2020" }
advent_2019 = { path = "lib_years/2019" }
advent_2018 = { path = "lib_years/2018" }
advent_2017 = { path = "lib_years/2017" }
advent_2016 = { path = "lib_years/2016" }
advent_2015 = { path = "lib_years/2015" }
common.workspace = true
